--- a/Project2.dproj
+++ b/Project2.dproj
@@ -60,7 +60,7 @@
         <SanitizedProjectName>Project2</SanitizedProjectName>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <DCC_UsePackage>DBXSqliteDriver;RESTComponents;fmxase;DBXDb2Driver;DBXInterBaseDriver;dxSpreadSheetCoreConditionalFormattingDialogsRS27;dxSpreadSheetConditionalFormattingDialogsRS27;vclactnband;dxGaugeControlRS27;vclFireDAC;dxSpreadSheetReportDesignerRS27;dxSpreadSheetRS27;bindcompvclsmp;emsclientfiredac;tethering;svnui;DataSnapFireDAC;dxPSRichEditControlLnkRS27;FireDACADSDriver;dxBarDBNavRS27;cxPivotGridOLAPRS27;cxLibraryRS27;dxRibbonCustomizationFormRS27;DBXMSSQLDriver;cxPivotGridRS27;dxADOServerModeRS27;DatasnapConnectorsFreePascal;FireDACMSSQLDriver;vcltouch;vcldb;bindcompfmx;svn;dxPScxExtCommonRS27;DBXOracleDriver;inetdb;dxFlowChartDesignerRS27;cxTreeListRS27;dxPScxSchedulerLnkRS27;emsedge;fmx;FireDACIBDriver;fmxdae;vcledge;vclib;dxRichEditDocumentModelRS27;dxPsPrVwAdvRS27;FireDACDBXDriver;dbexpress;IndyCore;dxRibbonRS27;dxOrgChartAdvancedCustomizeFormRS27;vclx;dxPSdxFCLnkRS27;dsnap;emsclient;DataSnapCommon;dxSpellCheckerRS27;FireDACCommon;dxTileControlRS27;dxPDFViewerRS27;RESTBackendComponents;DataSnapConnectors;cxSchedulerRS27;dxBarExtItemsRS27;cxGridEMFRS27;VCLRESTComponents;soapserver;dxWizardControlRS27;cxSchedulerTreeBrowserRS27;dxRichEditControlRS27;dxPScxTLLnkRS27;vclie;bindengine;DBXMySQLDriver;CloudService;FireDACOracleDriver;FireDACMySQLDriver;DBXFirebirdDriver;dxBarExtDBItemsRS27;dxPSCoreRS27;cxExportRS27;dxFlowChartLayoutsRS27;FireDACCommonODBC;FireDACCommonDriver;dxADOEMFRS27;DataSnapClient;dxPScxPivotGridLnkRS27;inet;cxSchedulerWebServiceStorageRS27;cxPivotGridChartRS27;IndyIPCommon;bindcompdbx;dxPSdxOCLnkRS27;vcl;IndyIPServer;DBXSybaseASEDriver;dxPScxPCProdRS27;IndySystem;dxHttpIndyRequestRS27;FireDACDb2Driver;bindcompvclwinx;dxPSdxDBOCLnkRS27;dsnapcon;dxComnRS27;dxFlowChartRS27;dxPSdxGaugeControlLnkRS27;dxMapControlRS27;FireDACMSAccDriver;fmxFireDAC;FireDACInfxDriver;vclimg;dxmdsRS27;dxPSdxPDFViewerLnkRS27;FireDAC;cxTreeListdxBarPopupMenuRS27;dxCoreRS27;dxPScxVGridLnkRS27;emshosting;dxPSdxSpreadSheetLnkRS27;dxPSPrVwRibbonRS27;dxEMFRS27;FireDACSqliteDriver;FireDACPgDriver;ibmonitor;FireDACASADriver;DBXOdbcDriver;FireDACTDataDriver;cxSchedulerRibbonStyleEventEditorRS27;soaprtl;DbxCommonDriver;dxTabbedMDIRS27;dxRichEditCoreRS27;ibxpress;dxGanttControlRS27;dxCloudServiceLibraryRS27;DataSnapServer;xmlrtl;soapmidas;DataSnapNativeClient;fmxobj;vclwinx;FireDACDSDriver;rtl;emsserverresource;DbxClientDriver;ibxbindings;DBXSybaseASADriver;dxPScxCommonRS27;CustomIPTransport;vcldsnap;dxdborRS27;dxdbtrRS27;dxSkinsCoreRS27;dxPScxGridLnkRS27;bindcomp;appanalytics;dxSpreadSheetCoreRS27;DBXInformixDriver;cxSchedulerGridRS27;dxGDIPlusRS27;IndyIPClient;dxFireDACServerModeRS27;cxVerticalGridRS27;bindcompvcl;dxDockingRS27;dxServerModeRS27;dxNavBarRS27;dxRichEditControlCoreRS27;dxFlowChartAdvancedCustomizeFormRS27;dxPSLnksRS27;dxorgcRS27;dbxcds;VclSmp;adortl;FireDACODBCDriver;dxDBXServerModeRS27;DataSnapIndy10ServerTransport;cxGridRS27;dsnapxml;DataSnapProviderClient;dbrtl;IndyProtocols;inetdbxpress;FireDACMongoDBDriver;dxBarRS27;dxPSdxLCLnkRS27;dxPSdxMapControlLnkRS27;dxFireDACEMFRS27;dxPSdxDBTVLnkRS27;dxtrmdRS27;DataSnapServerMidas;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>DBXSqliteDriver;IndyIPCommon;RESTComponents;bindcompdbx;DBXInterBaseDriver;vcl;IndyIPServer;vclactnband;vclFireDAC;IndySystem;bindcompvclsmp;tethering;svnui;bindcompvclwinx;dsnapcon;FireDACADSDriver;FireDACMSAccDriver;fmxFireDAC;vclimg;FireDAC;vcltouch;vcldb;bindcompfmx;svn;FireDACSqliteDriver;FireDACPgDriver;ibmonitor;inetdb;soaprtl;DbxCommonDriver;ibxpress;fmx;FireDACIBDriver;fmxdae;xmlrtl;soapmidas;vcledge;fmxobj;vclwinx;ibxbindings;rtl;vclib;DbxClientDriver;CustomIPTransport;vcldsnap;dbexpress;IndyCore;vclx;bindcomp;appanalytics;dsnap;FireDACCommon;IndyIPClient;bindcompvcl;RESTBackendComponents;VCLRESTComponents;soapserver;dbxcds;VclSmp;adortl;vclie;bindengine;DBXMySQLDriver;CloudService;dsnapxml;FireDACMySQLDriver;dbrtl;IndyProtocols;inetdbxpress;FireDACCommonODBC;FireDACCommonDriver;inet;fmxase;$(DCC_UsePackage)</DCC_UsePackage>
         <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde</DCC_Namespace>
         <BT_BuildType>Debug</BT_BuildType>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
@@ -84,6 +84,8 @@
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <UsePackages>true</UsePackages>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -132,6 +134,10 @@
                 <Source>
                     <Source Name="MainSource">Project2.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k270.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp270.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
                 <DeployFile LocalName="Win32\Debug\Project2.exe" Configuration="Debug" Class="ProjectOutput">
